<resources>
    <string name="app_name">implisitIntent</string>
    <string name="title_implicit_intent">Implicit Intent Example</string>
    <string name="btn_send_intent">Kirim Pesan</string>
    <string name="btn_set_alarm">Set Alarm</string>
    <string name="btn_set_timer">Set Timer</string>
    <string name="btn_open_web">Buka Web</string>
    <string name="btn_get_photo">Ambil Foto</string>
    <string name="desc_iv_hasil">Hasil Foto</string>
</resources>