<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <Button
        android:id="@+id/btnKirimPesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kirim Pesan" />


    <Button
        android:id="@+id/btnSetAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_alarm" />

    <Button
        android:id="@+id/btnSetTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_timer" />

    <Button
        android:id="@+id/btnOpenURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_open_web" />

    <EditText
        android:id="@+id/etURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan URL" />

    <Button
        android:id="@+id/btnSetEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set Event" />

    <Button
        android:id="@+id/btnGetPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_photo" />

    <ImageView
        android:id="@+id/ivHasil"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_iv_hasil" />
</LinearLayout>